[metadata]
name = cems2
summary = Cloud Computing Energy Efficiency Management Modular Software System
description_file = README.md
author = Jaime Iglesias Blanco
author-email = jaime.iglesias@alumnos.unican.es
home-page = https://github/jaimeib/cems2
license = Apache-2
version = 0.0.1
classifier =
    Development Status :: 1 - Planning
    Environment :: Console 
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules

[files]
packages =
    cems2
data_files =
    etc/cems2/ = etc/cems2/*

[entry_points]

cems2.cloud_analytics.collector =
    openstack_utilization = cems2.cloud_analytics.collector.plugings.openstack_utilization:OpenstackUtilizationCollector

cems2.cloud_analytics.reporter =
    grafana_reporter = cems2.cloud_analytics.reporter.plugings.grafana_reporter:GrafanaReporter

[build-system]
requires = ["setuptools>=54","wheel"]
build-backend = "setuptools.build_meta"

[options]
packages = find:
include_package_data = True

