[metadata]
name = cems2
summary = Cloud Computing Energy Efficiency Management Modular Software System
description_file = README.md
author = Jaime Iglesias Blanco
author_email = jaime.iglesias@alumnos.unican.es
home_page = https://github/jaimeib/cems2
license = Apache-2
version = 0.0.1
classifier =
    Development Status :: 1 - Planning
    Environment :: Console 
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules

[files]
packages = [cems2, cems2cli]
data_files =
    etc/cems2/ = etc/cems2/*

[entry_points]

console_scripts =
    cems2 = cems2.__main__:main
    cems2cli = cems2cli.__main__:main

cems2.cloud_analytics.collector =
    test = cems2.cloud_analytics.collector.plugins.test:Test
    test2 = cems2.cloud_analytics.collector.plugins.test2:Test2
    test_utilization = cems2.cloud_analytics.collector.plugins.testUtilization:TestUtilization
    openstack_utilization = cems2.cloud_analytics.collector.plugins.openstack_utilization:OpenStackUtilization

cems2.cloud_analytics.reporter =
    test = cems2.cloud_analytics.reporter.plugins.test:Test
    test2 = cems2.cloud_analytics.reporter.plugins.test2:Test2
    grafana = cems2.cloud_analytics.reporter.plugins.grafana:Grafana

cems2.machines_control.vm_optimization =
    test = cems2.machines_control.vm_optimization.plugins.test:Test
    AI_consolidation = cems2.machines_control.vm_optimization.plugins.AI_consolidation:AIConsolidation

cems2.machines_control.vm_connector =
    test = cems2.machines_control.vm_connector.plugins.test:Test
    test2 = cems2.machines_control.vm_connector.plugins.test2:Test2
    openstack_migration = cems2.machines_control.vm_connector.plugins.openstack_migration:OpenStackMigration

cems2.machines_control.pm_optimization =
    test = cems2.machines_control.pm_optimization.plugins.test:Test
    time_utilization = cems2.machines_control.pm_optimization.plugins.time_utilization:TimeUtilization

cems2.machines_control.pm_connector =
    test = cems2.machines_control.pm_connector.plugins.test:Test
    test2 = cems2.machines_control.pm_connector.plugins.test2:Test2
    IPMI = cems2.machines_control.pm_connector.plugins.IPMI:IPMI

[build-system]
requires = ["setuptools>=54","wheel"]
build-backend = "setuptools.build_meta"

[options]
packages = find:
include_package_data = True

